--- a/app/scripts/TODO.txt
+++ b/app/scripts/TODO.txt
@@ -1,3 +1,4 @@
 1) Add city pop up - change it to non blocking
 2) Drop down menu goes on the right
-3) Clcik on City to transfer (for mobile devices only)
+3) Click on City to transfer (for mobile devices only)
+4) Check list before adding new location
